--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 *:root {
     --default-color : #2E2F42;
     --secondary-color: #FFFFFF;
@@ -9,8 +8,6 @@
     --seventh-color:#434455;
     --theme-color: #2E2F42;
 }
-
-
 body {
     font-size: 16px;
     font-family: 'roboto', sans-serif;
@@ -20,8 +17,6 @@ body {
     line-height: 24px;
     letter-spacing: 0.32px;
 }
-
-
 .top-line{
     background-color: var(--secondary-color);
 }
@@ -77,8 +72,6 @@ body {
 }
 .feat-desc {
     color:var(--seventh-color);
-    line-height: 24px;
-    letter-spacing: 0.32px;
 }
 .section-title {
     font-size: 36px;
@@ -95,6 +88,8 @@ body {
 .filter-btn{
     font-weight: 500;
     line-height: 1.5;
+    font-size: 16px;
+    font-family: inherit;
     border-radius: 4px;
     border: 1px solid var(--fifth-color);
     border: 0;
@@ -104,6 +99,8 @@ body {
     background-color: var(--third-color);
     font-weight: 500;
     line-height: 24px;
+    font-size: 16px;
+    font-family: inherit;
     letter-spacing: 0.64px;
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -123,8 +120,6 @@ body {
     background-color: var(--theme-color);
     color: var(--secondary-color);
 }
-
-
 .menu-nav .nav:focus,
 .menu-nav .nav:hover{
     color: var(--sixth-color);
@@ -135,17 +130,15 @@ body {
     color: var(--sixth-color);
 }
 .hero-image .btn-primary:hover,
-.filters .filter-btn:hover{
+.filters .filter-btn:hover, .filters .filter-btn:hover .filter-btn.active{
     color: var(--secondary-color, #FFFFFF);
     background-color: var(--sixth-color, #404BBF);
+    border-color: var(--sixth-color, #404BBF);
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
     cursor: pointer;
 }
 .hero-image .btn-primary:focus,
 .filters .filter-btn:focus{
     color: var(--secondary-color, #FFFFFF);
-    background-color: var(--third-color);
-}
-.filters .filter-btn.active {
-    color: var(--secondary-color);
     background-color: var(--third-color);
 }
