--- a/css/styles.css
+++ b/css/styles.css
@@ -129,13 +129,13 @@ body {
 .menu-nav .nav.active{
     color: var(--sixth-color);
 }
-.hero-image .btn-primary:hover,
-.filters .filter-btn:hover, .filters .filter-btn:hover .filter-btn.active{
+.btn-primary:hover, .btn-primary:focus, 
+.filter-btn:hover, .filter-btn:focus, .filter-btn.active{
     color: var(--secondary-color, #FFFFFF);
     background-color: var(--sixth-color, #404BBF);
     border-color: var(--sixth-color, #404BBF);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
-    cursor: pointer;
+    /*cursor: pointer;*/
 }
 .hero-image .btn-primary:focus,
 .filters .filter-btn:focus{
