--- a/css/styles.css
+++ b/css/styles.css
@@ -104,12 +104,20 @@ body {
     font-family: inherit;
     letter-spacing: 0.64px;
     border-radius: 4px;
+    border: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .filter-btn{
     color: var(--third-color);
     background-color: var(--fouth-color);
     border: 1px solid var(--fifth-color);
+    font-weight: 500;
+    font-family: inherit;
+    border-radius: 4px;
+    cursor:pointer;
+    line-height: 24px;
+    letter-spacing: 0.64px;
+    font-size: 16px;
 }
 .card-content{
     color:var(--seventh-color);
